added dark mode and logos

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"gatsby-plugin-manifest": "^2.4.17",
 		"gatsby-plugin-offline": "^3.2.16",
 		"gatsby-plugin-react-helmet": "^3.3.9",
+		"gatsby-plugin-react-svg": "^3.0.0",
 		"gatsby-plugin-sharp": "^2.6.18",
 		"gatsby-source-filesystem": "^2.3.18",
 		"gatsby-transformer-sharp": "^2.5.10",
@@ -17,7 +18,8 @@
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-helmet": "^6.1.0"
+		"react-helmet": "^6.1.0",
+		"react-use": "^15.3.2"
 	},
 	"keywords": [
 		"gatsby"
