--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"gatsby": "^2.23.22",
 		"gatsby-image": "^2.4.12",
+		"gatsby-plugin-google-fonts": "^1.0.1",
 		"gatsby-plugin-manifest": "^2.4.17",
 		"gatsby-plugin-offline": "^3.2.16",
 		"gatsby-plugin-react-helmet": "^3.3.9",
