--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"version": "0.1.0",
 	"author": "Yash Gupta <gyash24x7@gmail.com>",
 	"dependencies": {
+		"@emotion/core": "^10.0.28",
 		"gatsby": "^2.23.22",
 		"gatsby-image": "^2.4.12",
+		"gatsby-plugin-emotion": "^4.3.10",
 		"gatsby-plugin-google-fonts": "^1.0.1",
 		"gatsby-plugin-manifest": "^2.4.17",
 		"gatsby-plugin-offline": "^3.2.16",
@@ -20,6 +22,7 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.1.0",
+		"react-typical": "^0.1.3",
 		"react-use": "^15.3.2"
 	},
 	"keywords": [
