--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"gatsby-plugin-offline": "^3.2.16",
 		"gatsby-plugin-react-helmet": "^3.3.9",
 		"gatsby-plugin-react-svg": "^3.0.0",
+		"gatsby-plugin-sass": "^2.3.12",
 		"gatsby-plugin-sharp": "^2.6.18",
 		"gatsby-source-filesystem": "^2.3.18",
 		"gatsby-transformer-sharp": "^2.5.10",
+		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
