--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.1.0",
+		"react-slick": "^0.26.1",
 		"react-typical": "^0.1.3",
-		"react-use": "^15.3.2"
+		"react-use": "^15.3.2",
+		"slick-carousel": "^1.8.1"
 	},
 	"keywords": [
 		"gatsby"
@@ -41,5 +43,8 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/gyash24x7/gyuapstha.git"
+	},
+	"devDependencies": {
+		"@types/react-slick": "^0.23.4"
 	}
 }
