--- a/package.json
+++ b/package.json
@@ -1,50 +1,27 @@
 {
-	"name": "gyuapstha",
-	"private": true,
-	"description": "My Portfolio",
+	"name": "gyuapstha2",
 	"version": "0.1.0",
-	"author": "Yash Gupta <gyash24x7@gmail.com>",
-	"dependencies": {
-		"@emotion/core": "^10.0.28",
-		"gatsby": "^2.23.22",
-		"gatsby-image": "^2.4.12",
-		"gatsby-plugin-emotion": "^4.3.10",
-		"gatsby-plugin-google-fonts": "^1.0.1",
-		"gatsby-plugin-manifest": "^2.4.17",
-		"gatsby-plugin-offline": "^3.2.16",
-		"gatsby-plugin-react-helmet": "^3.3.9",
-		"gatsby-plugin-react-svg": "^3.0.0",
-		"gatsby-plugin-sass": "^2.3.12",
-		"gatsby-plugin-sharp": "^2.6.18",
-		"gatsby-source-filesystem": "^2.3.18",
-		"gatsby-transformer-sharp": "^2.5.10",
-		"node-sass": "^4.14.1",
-		"normalize.css": "^8.0.1",
-		"prop-types": "^15.7.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-helmet": "^6.1.0",
-		"react-slick": "^0.26.1",
-		"react-typical": "^0.1.3",
-		"react-use": "^15.3.2",
-		"slick-carousel": "^1.8.1"
-	},
-	"keywords": [
-		"gatsby"
-	],
-	"license": "0BSD",
+	"private": true,
 	"scripts": {
-		"build": "gatsby build",
-		"dev": "gatsby develop",
-		"start": "npm run develop",
-		"serve": "gatsby serve",
-		"clean": "gatsby clean"
+		"dev": "rm -rf .next && next dev",
+		"build": "next build",
+		"start": "next start"
 	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/gyash24x7/gyuapstha.git"
+	"dependencies": {
+		"classnames": "^2.2.6",
+		"next": "9.4.4",
+		"normalize.css": "^8.0.1",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-helmet": "^6.1.0",
+		"react-use": "^15.3.2",
+		"typed.js": "^2.0.11"
 	},
 	"devDependencies": {
-		"@types/react-slick": "^0.23.4"
+		"@types/classnames": "^2.2.10",
+		"@types/node": "^14.0.22",
+		"@types/react": "^16.9.42",
+		"babel-plugin-inline-react-svg": "^1.1.1",
+		"typescript": "^3.9.6"
 	}
 }
