--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "rm -rf .next && next dev",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"export": "next export"
 	},
 	"dependencies": {
 		"classnames": "^2.2.6",
