--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"classnames": "^2.2.6",
 		"next": "9.4.4",
+		"next-pwa": "^3.0.3",
 		"normalize.css": "^8.0.1",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
