--- a/package.json
+++ b/package.json
@@ -1,29 +1,46 @@
 {
-	"name": "gyuapstha2",
-	"version": "0.1.0",
+	"name": "gyuapstha",
 	"private": true,
-	"scripts": {
-		"dev": "rm -rf .next && next dev",
-		"build": "next build",
-		"start": "next start",
-		"export": "next export"
-	},
+	"description": "A simple starter to get up and developing quickly with Gatsby",
+	"version": "0.1.0",
+	"author": "Yash Gupta <gyash24x7@gmail.com>",
 	"dependencies": {
 		"classnames": "^2.2.6",
-		"next": "9.4.4",
-		"next-pwa": "^3.0.3",
-		"normalize.css": "^8.0.1",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
+		"gatsby": "^2.24.3",
+		"gatsby-image": "^2.4.13",
+		"gatsby-plugin-manifest": "^2.4.18",
+		"gatsby-plugin-offline": "^3.2.18",
+		"gatsby-plugin-react-helmet": "^3.3.10",
+		"gatsby-plugin-react-svg": "^3.0.0",
+		"gatsby-plugin-sass": "^2.3.12",
+		"gatsby-plugin-sharp": "^2.6.19",
+		"gatsby-source-filesystem": "^2.3.19",
+		"gatsby-transformer-sharp": "^2.5.11",
+		"node-sass": "^4.14.1",
+		"normalize.scss": "^0.1.0",
+		"prop-types": "^15.7.2",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
 		"react-helmet": "^6.1.0",
 		"react-use": "^15.3.2",
 		"typed.js": "^2.0.11"
 	},
+	"keywords": [
+		"gatsby"
+	],
+	"license": "0BSD",
+	"scripts": {
+		"build": "gatsby build",
+		"dev": "gatsby develop",
+		"start": "npm run develop",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gyash24x7/gyuapstha"
+	},
 	"devDependencies": {
-		"@types/classnames": "^2.2.10",
-		"@types/node": "^14.0.22",
-		"@types/react": "^16.9.42",
-		"babel-plugin-inline-react-svg": "^1.1.1",
-		"typescript": "^3.9.6"
+		"@types/classnames": "^2.2.10"
 	}
 }
