--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,10 @@
 		"forceConsistentCasingInFileNames": true,
 		"module": "esnext",
 		"moduleResolution": "node",
-
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "preserve",
+		"jsx": "react",
 		"noImplicitAny": true,
 		"outDir": "./dist/",
 		"preserveConstEnums": true,
@@ -34,6 +33,6 @@
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true
 	},
-	"exclude": ["/node_modules/"],
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+	"include": ["src"],
+	"exclude": ["/node_modules/"]
 }
