--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "Yash Gupta <gyash24x7@gmail.com>",
 	"dependencies": {
 		"classnames": "^2.2.6",
+		"env-cmd": "^10.1.0",
 		"gatsby": "^2.24.3",
 		"gatsby-image": "^2.4.13",
 		"gatsby-plugin-manifest": "^2.4.18",
@@ -31,8 +32,7 @@
 	"license": "0BSD",
 	"scripts": {
 		"build": "gatsby build",
-		"dev": "gatsby develop",
-		"start": "npm run develop",
+		"dev": "env-cmd gatsby develop",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean"
 	},
@@ -41,6 +41,7 @@
 		"url": "https://github.com/gyash24x7/gyuapstha"
 	},
 	"devDependencies": {
-		"@types/classnames": "^2.2.10"
+		"@types/classnames": "^2.2.10",
+		"typescript": "^3.9.6"
 	}
 }
