--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"devDependencies": {
 		"@types/classnames": "^2.2.10",
+		"@types/react-helmet": "^6.0.0",
 		"typescript": "^3.9.6"
 	}
 }
