--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"env-cmd": "^10.1.0",
 		"gatsby": "^2.24.3",
 		"gatsby-image": "^2.4.13",
+		"gatsby-plugin-brotli": "^1.3.1",
 		"gatsby-plugin-manifest": "^2.4.18",
 		"gatsby-plugin-offline": "^3.2.18",
 		"gatsby-plugin-react-helmet": "^3.3.10",
