--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"gatsby-plugin-sharp": "^2.6.27",
 		"gatsby-source-filesystem": "^2.3.24",
 		"gatsby-transformer-sharp": "^2.5.13",
+		"glob": "^7.1.6",
+		"iltorb": "^2.4.5",
 		"node-sass": "^4.14.1",
 		"normalize.scss": "^0.1.0",
 		"prop-types": "^15.7.2",
@@ -25,7 +27,8 @@
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.1.0",
 		"react-use": "^15.3.3",
-		"typed.js": "^2.0.11"
+		"typed.js": "^2.0.11",
+		"zlib": "^1.0.5"
 	},
 	"keywords": [
 		"gatsby"
