--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"env-cmd": "^10.1.0",
 		"gatsby": "^2.24.47",
 		"gatsby-image": "^2.4.16",
+		"gatsby-plugin-google-analytics": "^2.3.13",
+		"gatsby-plugin-google-tagmanager": "^2.3.11",
 		"gatsby-plugin-iltorb": "^1.0.0",
 		"gatsby-plugin-manifest": "^2.4.23",
 		"gatsby-plugin-offline": "^3.2.23",
