--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
 	"dependencies": {
 		"classnames": "^2.2.6",
 		"env-cmd": "^10.1.0",
+		"firebase": "^7.18.0",
 		"gatsby": "^2.24.47",
 		"gatsby-image": "^2.4.16",
-		"gatsby-plugin-google-analytics": "^2.3.13",
-		"gatsby-plugin-google-tagmanager": "^2.3.11",
+		"gatsby-plugin-firebase": "^0.2.0-beta.4",
 		"gatsby-plugin-iltorb": "^1.0.0",
 		"gatsby-plugin-manifest": "^2.4.23",
 		"gatsby-plugin-offline": "^3.2.23",
@@ -37,7 +37,7 @@
 	],
 	"license": "0BSD",
 	"scripts": {
-		"build": "gatsby build",
+		"build": "env-cmd gatsby build",
 		"dev": "gatsby clean && env-cmd gatsby develop",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean"
