--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
 	"name": "gyuapstha",
 	"private": true,
-	"description": "A simple starter to get up and developing quickly with Gatsby",
+	"description": "My Personal Website - Yash Gupta | Developer",
 	"version": "0.1.0",
 	"author": "Yash Gupta <gyash24x7@gmail.com>",
 	"dependencies": {
-		"classnames": "^2.2.6",
+		"babel-plugin-styled-components": "^1.11.1",
 		"env-cmd": "^10.1.0",
-		"firebase": "^7.18.0",
 		"gatsby": "^2.24.47",
 		"gatsby-image": "^2.4.16",
-		"gatsby-plugin-firebase": "^0.2.0-beta.4",
 		"gatsby-plugin-iltorb": "^1.0.0",
 		"gatsby-plugin-manifest": "^2.4.23",
 		"gatsby-plugin-offline": "^3.2.23",
 		"gatsby-plugin-react-helmet": "^3.3.10",
 		"gatsby-plugin-react-svg": "^3.0.0",
-		"gatsby-plugin-sass": "^2.3.12",
 		"gatsby-plugin-sharp": "^2.6.27",
+		"gatsby-plugin-styled-components": "^3.3.10",
 		"gatsby-source-filesystem": "^2.3.24",
 		"gatsby-transformer-sharp": "^2.5.13",
 		"glob": "^7.1.6",
 		"iltorb": "^2.4.5",
-		"node-sass": "^4.14.1",
-		"normalize.scss": "^0.1.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.1.0",
 		"react-use": "^15.3.3",
+		"styled-components": "^5.1.1",
 		"typed.js": "^2.0.11",
 		"zlib": "^1.0.5"
 	},
@@ -37,7 +34,7 @@
 	],
 	"license": "0BSD",
 	"scripts": {
-		"build": "env-cmd gatsby build",
+		"build": "gatsby clean && env-cmd gatsby build",
 		"dev": "gatsby clean && env-cmd gatsby develop",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean"
@@ -47,8 +44,8 @@
 		"url": "https://github.com/gyash24x7/gyuapstha"
 	},
 	"devDependencies": {
-		"@types/classnames": "^2.2.10",
 		"@types/react-helmet": "^6.1.0",
-		"typescript": "^3.9.7"
+		"@types/styled-components": "^5.1.2",
+		"typescript": "^4.0.2"
 	}
 }
