--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
 		"env-cmd": "^10.1.0",
 		"gatsby": "^2.24.47",
 		"gatsby-image": "^2.4.16",
+		"gatsby-plugin-google-analytics": "^2.3.13",
 		"gatsby-plugin-iltorb": "^1.0.0",
 		"gatsby-plugin-manifest": "^2.4.23",
 		"gatsby-plugin-offline": "^3.2.23",
+		"gatsby-plugin-prefetch-google-fonts": "^1.4.3",
 		"gatsby-plugin-react-helmet": "^3.3.10",
 		"gatsby-plugin-react-svg": "^3.0.0",
 		"gatsby-plugin-sharp": "^2.6.27",
@@ -23,6 +25,7 @@
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-ga": "^3.1.2",
 		"react-helmet": "^6.1.0",
 		"react-use": "^15.3.3",
 		"styled-components": "^5.1.1",
