--- a/package.json
+++ b/package.json
@@ -5,38 +5,36 @@
 	"version": "0.1.0",
 	"author": "Yash Gupta <gyash24x7@gmail.com>",
 	"dependencies": {
-		"babel-plugin-styled-components": "^1.11.1",
-		"env-cmd": "^10.1.0",
-		"gatsby": "^2.24.47",
-		"gatsby-image": "^2.4.16",
-		"gatsby-plugin-google-analytics": "^2.3.13",
-		"gatsby-plugin-manifest": "^2.4.23",
-		"gatsby-plugin-offline": "^3.2.23",
-		"gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-		"gatsby-plugin-react-helmet": "^3.3.10",
-		"gatsby-plugin-react-svg": "^3.0.0",
-		"gatsby-plugin-sharp": "^2.6.27",
-		"gatsby-plugin-styled-components": "^3.3.10",
-		"gatsby-source-filesystem": "^2.3.24",
-		"gatsby-transformer-sharp": "^2.5.13",
-		"glob": "^7.1.6",
-		"iltorb": "^2.4.5",
-		"prop-types": "^15.7.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-helmet": "^6.1.0",
-		"react-use": "^15.3.3",
-		"styled-components": "^5.1.1",
-		"typed.js": "^2.0.11",
-		"zlib": "^1.0.5"
+		"babel-plugin-styled-components": "2.0.2",
+		"gatsby": "4.5.4",
+		"gatsby-image": "3.11.0",
+		"gatsby-plugin-manifest": "4.5.2",
+		"gatsby-plugin-offline": "5.5.2",
+		"gatsby-plugin-prefetch-google-fonts": "1.4.3",
+		"gatsby-plugin-react-helmet": "5.5.0",
+		"gatsby-plugin-react-svg": "3.1.0",
+		"gatsby-plugin-sharp": "4.5.2",
+		"gatsby-plugin-styled-components": "5.5.0",
+		"gatsby-source-filesystem": "4.5.2",
+		"gatsby-transformer-sharp": "4.5.0",
+		"glob": "7.2.0",
+		"iltorb": "2.4.5",
+		"prop-types": "15.8.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-helmet": "6.1.0",
+		"react-use": "17.3.2",
+		"styled-components": "5.3.3",
+		"typed.js": "2.0.12",
+		"zlib": "1.0.5"
 	},
 	"keywords": [
 		"gatsby"
 	],
 	"license": "0BSD",
 	"scripts": {
-		"build": "gatsby clean && env-cmd gatsby build",
-		"dev": "gatsby clean && env-cmd gatsby develop",
+		"build": "gatsby clean && gatsby build",
+		"dev": "gatsby clean && gatsby develop",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean"
 	},
@@ -45,8 +43,8 @@
 		"url": "https://github.com/gyash24x7/gyuapstha"
 	},
 	"devDependencies": {
-		"@types/react-helmet": "^6.1.0",
-		"@types/styled-components": "^5.1.2",
-		"typescript": "^4.0.2"
+		"@types/react-helmet": "6.1.5",
+		"@types/styled-components": "5.1.20",
+		"typescript": "4.5.5"
 	}
 }
