--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"version": "0.1.0",
 	"author": "Yash Gupta <gyash24x7@gmail.com>",
 	"dependencies": {
+		"@fontsource/fjalla-one": "4.5.0",
+		"@fontsource/montserrat": "4.5.2",
 		"babel-plugin-styled-components": "2.0.2",
 		"gatsby": "4.5.4",
 		"gatsby-image": "3.11.0",
